# thesis-compliance

./: .gitignore  README.md  action.yml  claude.md  pyproject.toml
.github/workflows/: ci.yml  thesis-check.yml
src/thesis_compliance/: __init__.py  api.py  cli.py  models.py
src/thesis_compliance/checker/: __init__.py  engine.py  evaluators.py  violations.py
src/thesis_compliance/extractor/: __init__.py  bibliography.py  captions.py  fonts.py  headings.py  margins.py  pages.py  pdf.py  spacing.py
src/thesis_compliance/reporter/: __init__.py  console.py  json.py
src/thesis_compliance/spec/: __init__.py  loader.py  rules.py
src/thesis_compliance/spec/builtin/: chicago.yaml  cornell.yaml  harvard.yaml  mit.yaml  rackham.yaml  rice.yaml  stanford.yaml  unc.yaml
tests/: __init__.py  conftest.py  test_api.py  test_bibliography.py  test_captions.py  test_cli.py  test_engine.py  test_evaluators.py  test_fonts.py  test_headings.py  test_margins.py  test_models.py  test_pages.py  test_pdf.py  test_spacing.py  test_spec.py  test_violations.py
tests/fixtures/: generate_pdfs.py
web/: README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/check/: page.tsx
web/src/components/: ComplianceReport.tsx  FileUpload.tsx  UniversitySelect.tsx
web/src/lib/: types.ts
