[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thesis-compliance"
version = "0.1.0"
description = "Detect formatting deviations in thesis PDFs by analyzing rendered output"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Thesis Compliance Team" }
]
keywords = ["thesis", "pdf", "compliance", "formatting", "graduate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

dependencies = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
thesis-check = "thesis_compliance.cli:app"

[project.urls]
Homepage = "https://github.com/thesis-compliance/thesis-compliance"
Documentation = "https://github.com/thesis-compliance/thesis-compliance#readme"
Issues = "https://github.com/thesis-compliance/thesis-compliance/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/thesis_compliance"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["fitz", "fitz.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pdfplumber", "pdfplumber.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=thesis_compliance"
